# shitcstd

./: CMakeLists.txt  LICENSE  README.md
include/: assert.h  ctype.h  errno.h  inttypes.h  limits.h  math.h  signal.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  unistd.h
include/linux_x86/: syscall.h
include/shitcstd/: stdlib.h
include/shitcstd/linux_x86/: syscall.h
include/sys/: types.h  wait.h
src/: malloc.c  math.c  stdio.c  stdlib.c  string.c  strings.c  time.c  unistd.c
src/linux_x86/: crt0.S  syscall.c  syscall_asm.S
src/sys/: wait.c
